feat: configure CORS, disable CSRF, and update security filter chain authorization rules